--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       };
 
       var serviceID = "service_5wkxw1n"; // ID сервиса
-      var templateID = ""; // тут ничего нет не смотрите сюа
+      var templateID = "template_wq9unnf"; // шаблон
 
       emailjs.send(serviceID, templateID, params)
         .then(function(res) {
